PostCodeCheckerService - added - empty

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,11 @@
 !/tmp/pids/
 !/tmp/pids/.keep
 
+#Ignore CodeClimate
+/coverage
+/coverage/*
+
+
 # Ignore uploaded files in development.
 /storage/*
 !/storage/.keep
